--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -1,7 +1,7 @@
 FROM python:latest
 RUN mkdir myapp/
-COPY app.py myapp/app.py
-COPY requirements.txt myapp/requirements.txt
+COPY app.py Flask_server/app.py
+COPY requirements.txt Flask_server/requirements.txt
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
 EXPOSE 10081
