--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -4,5 +4,6 @@ COPY app.py Flask_server/app.py
 COPY requirements.txt Flask_server/requirements.txt
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
+RUN pip install --upgrade pip
 EXPOSE 10081
 CMD ["python", "app.py"]
