--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.TodayFeeling"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".profile.FixUserActivity"
+            android:exported="false" />
         <activity
             android:name=".sign.SignUpActivity"
             android:exported="false" />
