--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context : ./Flask_server
+          context : /Flask_server
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker-memo:latest
           
       -
