--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -1,7 +1,7 @@
 FROM python:latest
 RUN mkdir Flask_server/
 RUN pip install --upgrade pip
-COPY ./ Flask_server
+COPY ./Flask_server Flask_server
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
 EXPOSE 10081
