--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -7,27 +7,37 @@ on:
 jobs:
   build-image:
     runs-on : ubuntu-latest
+    environment: DB_connection
     steps:
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+      -
+        name: access to secrets
+        run : |
+          cd ./Flask_server
+          echo "APP_SECRETKEY = '$APP_SECRETKEY'
+          DB_IP = '$DB_IP'
+          DB_PORT = '$DB_PORT'
+          DB_PW = '$DB_PW'
+          DB_SCHEMA = '$DB_SCHEMA'
+          DB_USER = '$DB_USER'" > .env
       -
         name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           push: true
           file: ./Flask_server/dockerfile
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker-memo:latest
-          
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
