--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -14,7 +14,7 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - uses : action/checkout@v3
+      - uses : actions/checkout@v3
       -
         name: access to secrets
         run : |
