--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -5,49 +5,49 @@ on:
       - main
 
 jobs:
-  build-image:
-    runs-on : ubuntu-latest
-    environment: DB_connection
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - uses : actions/checkout@v3
-      -
-        name: access to secrets
-        run : |
-          touch .env
-          echo APP_SECRETKEY = '${{ secrets.APP_SECRETKEY }}' >> .env
-          echo DB_IP = '${{ secrets.DB_IP }}' >> .env
-          echo DB_PORT = '${{ secrets.DB_PORT }}' >> .env
-          echo DB_PW = '${{ secrets.DB_PW }}' >> .env
-          echo DB_SCHEMA = '${{ secrets.DB_SCHEMA }}' >> .env
-          echo DB_USER = '${{ secrets.DB_USER }}' >> .env
-          cat .env
-        working-directory: ./Flask_server
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          file: ./Flask_server/dockerfile
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker-memo:latest
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
-        working-directory: ${{ env.working-directory }}
+#   build-image:
+#     runs-on : ubuntu-latest
+#     environment: DB_connection
+#     steps:
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v2
+#       -
+#         name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v2
+#       - uses : actions/checkout@v3
+#       -
+#         name: access to secrets
+#         run : |
+#           touch .env
+#           echo APP_SECRETKEY = '${{ secrets.APP_SECRETKEY }}' >> .env
+#           echo DB_IP = '${{ secrets.DB_IP }}' >> .env
+#           echo DB_PORT = '${{ secrets.DB_PORT }}' >> .env
+#           echo DB_PW = '${{ secrets.DB_PW }}' >> .env
+#           echo DB_SCHEMA = '${{ secrets.DB_SCHEMA }}' >> .env
+#           echo DB_USER = '${{ secrets.DB_USER }}' >> .env
+#           cat .env
+#         working-directory: ./Flask_server
+#       -
+#         name: Login to DockerHub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       -
+#         name: Build and push
+#         id: docker_build
+#         uses: docker/build-push-action@v4
+#         with:
+#           push: true
+#           file: ./Flask_server/dockerfile
+#           tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker-memo:latest
+#       -
+#         name: Image digest
+#         run: echo ${{ steps.docker_build.outputs.digest }}
+#         working-directory: ${{ env.working-directory }}
         
   cd-pipeline:
-    needs: build-image
+#     needs: build-image
     name: continuos deploy
     runs-on: ubuntu-latest
     steps:
@@ -59,7 +59,7 @@ jobs:
           username: ${{ secrets.USER_NAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
-          source: "docker-compose.yaml"
+          source: "./docker-compose.yaml"
           target: "/home/dev_hwan/"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
