--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -52,15 +52,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: copy file via ssh password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER_NAME }}
-          password: ${{ secrets.PASS_WORD }}
-          port: ${{ secrets.PORT }}
-          source: "./docker-compose.yaml"
-          target: "/home/dev_hwan/"
+#       - name: copy file via ssh password
+#         uses: appleboy/scp-action@master
+#         with:
+#           host: ${{ secrets.HOST }}
+#           username: ${{ secrets.USER_NAME }}
+#           password: ${{ secrets.PASS_WORD }}
+#           port: ${{ secrets.PORT }}
+#           source: "./docker-compose.yaml"
+#           target: "/home/dev_hwan/"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
