--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -51,7 +51,7 @@ jobs:
     name: continuos deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@0.1.7
+      - uses: actions/checkout@v0.1.7
 #       - name: copy file via ssh password
 #         uses: appleboy/scp-action@master
 #         with:
