--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -51,9 +51,9 @@ jobs:
     name: continuos deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v0.1.7
+      - uses: actions/checkout@v3
 #       - name: copy file via ssh password
-#         uses: appleboy/scp-action@master
+#         uses: appleboy/scp-action@v0.7.1
 #         with:
 #           host: 218.232.159.156
 #           username: dev_hwan
