--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -55,19 +55,19 @@ jobs:
 #       - name: copy file via ssh password
 #         uses: appleboy/scp-action@v0.7.1
 #         with:
-#           host: 218.232.159.156
-#           username: dev_hwan
+#           host: ${{ secrets.HOST }}
+#           username: ${{ secrets.USER_NAME }}
 #           password: ${{ secrets.PASS_WORD }}
-#           port: 10083
+#           port: ${{ secrets.PORT }}
 #           source: "./docker-compose.yaml"
 #           target: "/home/dev_hwan/"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER_NAME }}
+          host: 218.232.159.156
+          username: dev_hwan
           password: ${{ secrets.PASS_WORD }}
-          port: ${{ secrets.PORT }}
+          port: 10083
 #           script: "docker-compose pull && docker-compose up -d"
           script: whoami
     
