--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -52,22 +52,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-#       - name: copy file via ssh password
-#         uses: appleboy/scp-action@v0.7.1
-#         with:
-#           host: ${{ secrets.HOST }}
-#           username: ${{ secrets.USER_NAME }}
-#           password: ${{ secrets.PASS_WORD }}
-#           port: ${{ secrets.PORT }}
-#           source: "./docker-compose.yaml"
-#           target: "/home/dev_hwan/"
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.7.1
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER_NAME }}
+          password: ${{ secrets.PASS_WORD }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "./docker-compose.yaml"
+          target: "/home/dev_hwan/"
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.PASS_WORD }}
-          port: ${{ secrets.PORT }}
-#           script: "docker-compose pull && docker-compose up -d"
-          script: whoami
+          port: ${{ secrets.SSH_PORT }}
+          script: "docker-compose pull && docker-compose up -d"
+
     
