--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -1,8 +1,10 @@
 FROM python:latest
 RUN mkdir Flask_server/
-RUN pip install --upgrade pip
+RUN apt-get update -y
+RUN apt-get install vim -y
 COPY ./Flask_server Flask_server
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
 EXPOSE 10081
-CMD ["python", "app.py"]
+
+ENTRYPOINT tail -f /dev/null
