--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -25,8 +25,8 @@ jobs:
           DB_PORT = '${{ secrets.DB_PORT }}'$'\n'\
           DB_PW = '${{ secrets.DB_PW }}'$'\n'\
           DB_SCHEMA = '${{ secrets.DB_SCHEMA }}'$'\n'\
-          DB_USER = '${{ secrets.DB_USER }}' >> Flask_server/.env
-          cat Flask_server/.env
+          DB_USER = '${{ secrets.DB_USER }}' >> .env
+          cat .env
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
