--- a/Flask_server/dockerfile
+++ b/Flask_server/dockerfile
@@ -3,6 +3,7 @@ RUN mkdir Flask_server/
 RUN apt-get update -y
 RUN apt-get install vim -y
 COPY ./Flask_server Flask_server
+COPY ./Flask_server/.env Flask_server
 WORKDIR /Flask_server/
 RUN pip install -r requirements.txt
 EXPOSE 10081
