--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.android.gms:play-services-basement:18.1.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
