--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -1,26 +1,89 @@
-name : Sync and merge upstream repository
-on : 
+# name : Sync and merge upstream repository
+# on : 
+#   workflow_dispatch:
+#   schedule:
+#   - cron : '15 * * * * '
+
+# jobs:
+#   merge:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Merge upstream
+#         run: |
+#           git config --global user.name 'dksj9921'
+#           git config --global user.email 'sung980213@naver.com'
+#           # "git checkout master" is unnecessary, already here by default
+#           git pull --unshallow  # this option is very important, you would get
+#                                 # complains about unrelated histories without it.
+#                                 # (but actions/checkout@v2 can also be instructed
+#                                 # to fetch all git depth right from the start)
+#           git remote add upstream https://github.com/Gocha64/Today_Feeling.git
+#           git fetch upstream
+#           git checkout main
+#           git merge -Xtheirs upstream/main
+#           git push origin main
+#           # etc
+
+
+name: Sync with Upstream and Create Pull Request
+on:
   workflow_dispatch:
   schedule:
   - cron : '15 * * * * '
-
+  
 jobs:
-  merge:
+  sync-and-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Merge upstream
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: 'refs/heads/main'
+      - name: Set up Git
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Configure Git
         run: |
-          git config --global user.name 'dksj9921'
-          git config --global user.email 'sung980213@naver.com'
-          # "git checkout master" is unnecessary, already here by default
-          git pull --unshallow  # this option is very important, you would get
-                                # complains about unrelated histories without it.
-                                # (but actions/checkout@v2 can also be instructed
-                                # to fetch all git depth right from the start)
+          git config --global user.email "sung980213@naver.com"
+          git config --global user.name "dksj9921"
+      - name: Add Upstream Remote
+        run: |
           git remote add upstream https://github.com/Gocha64/Today_Feeling.git
+      - name: Fetch Upstream
+        run: |
           git fetch upstream
-          git checkout main
-          git merge -Xtheirs upstream/main
-          git push origin main
-          # etc
+      - name: Find Difference between Upstream and Forked Repository
+        id: find_diff
+        run: |
+          git diff --name-only upstream/main..main > diff.txt
+          echo "::set-output name=diff_file::diff.txt"
+      - name: Merge Upstream Main
+        run: |
+          git merge upstream/main
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+          force: true
+      - name: Create Pull Request
+        if: steps.find_diff.outputs.diff_file != ''
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: Sync with upstream
+          commit-message: Sync with upstream
+          branch: sync-with-upstream
+          body: This is an automated pull request to sync changes from the upstream repository.
+          labels: automerge
+          reviewers: octocat
+          token: ${{ secrets.GITHUB_TOKEN }}
+          delete-branch: true
+          draft: false
+          base: main
+          head: sync-with-upstream
+          maintainer-can-modify: true
+          changes: |
+            ${{{ steps.find_diff.outputs.diff_file }}}
+
