--- a/.github/workflows/flask-run-action.yml
+++ b/.github/workflows/flask-run-action.yml
@@ -53,6 +53,8 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
         working-directory: ${{ env.working-directory }}
         
+    if: ${{ github.event.pull_request.head.repo.full_name == '' }}
+        
   cd-pipeline:
     needs: build-image
     name: continuos deploy
