--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -43,7 +43,7 @@ jobs:
           fetch-depth: 0    # Fetch all history for the upstream and forked repositories
 
       - name: Fetch upstream changes
-        run: git fetch upstream
+        run: git fetch upstream https://github.com/Gocha64/Today_Feeling.git
 
       - name: Check for diff between upstream and forked repositories
         id: check_diff
