--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -62,7 +62,7 @@ jobs:
 
   create_pull_request:
     needs: find_diff
-    if: ${{ needs.find_diff.outputs.diff == 'true' }}
+    if: ${{ needs.find_diff.outputs.diff == 'false' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
