--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -56,10 +56,10 @@ jobs:
           if [ -s diff.txt ]
           then
             echo "::set-output name=diff::true"
-            echo "The output from job1 was ${{ find_diff.outputs.diff }}"
+            echo "true!"
           else
             echo "::set-output name=diff::false"
-            echo "The output from job1 was ${{ find_diff.outputs.diff }}"
+            echo "false!"
           fi
 
   create_pull_request:
