--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - name: check code
         run: | 
-          echo ${{ needs.find_diff.outputs.diff' }}
+          echo "${{ needs.find_diff.outputs.diff' }}"
 
   create_pull_request:
     needs: find_diff
