--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -68,7 +68,7 @@ jobs:
     steps:
       - name: check code
         run: | 
-          echo "diff값은 == ${{ needs.find_diff.outputs.diff }}"
+          echo "diff값은 == ${{ find_diff.outputs.diff }}"
 
   create_pull_request:
     needs: find_diff
