--- a/.github/workflows/Sync and merge upstream repository.yml
+++ b/.github/workflows/Sync and merge upstream repository.yml
@@ -55,7 +55,7 @@ jobs:
           cat diff.txt
           if [ -s diff.txt ]
           then
-            echo "{diff}={true}" >> $GITHUB_OUTPUT
+            echo "{diff}={man}" >> $GITHUB_OUTPUT
             echo "true!"
           else
             echo "{diff}={false}" >> $GITHUB_OUTPUT
@@ -68,7 +68,7 @@ jobs:
     steps:
       - name: check code
         run: | 
-          echo "diff값은 == ${{ find_diff.outputs.diff }}"
+          echo "diff값은 == ${{ needs.find_diff.outputs.diff }}"
 
   create_pull_request:
     needs: find_diff
