--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -88,7 +88,12 @@ jobs:
           git fetch upstream
           git checkout main
           git merge -Xtheirs upstream/main
-          git push origin main
+          
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.MY.TOKEN }}
+          branch: ${{ github.ref }}
         
 
 
