--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -89,8 +89,17 @@ jobs:
           git checkout main
           git merge -Xtheirs upstream/main
           
-      - name: Push changes
-        run: git push https://${{ secrets.MY_TOKEN }}@github.com/dksj9921/Today_Feeling.git
+      - name: checkout other branch
+        run: |
+          git checkout my-branch
+          
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: Update forked repository to match upstream
+          body: This pull request updates the forked repository to match upstream.
+          base: main
+          token: ${{ secrets.MY_TOKEN }}
 
 
 
