--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -91,7 +91,7 @@ jobs:
           
       - name: checkout other branch
         run: |
-          git checkout my-branch
+          git checkout -b my-branch
           
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3
