--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -96,6 +96,7 @@ jobs:
           title: Update forked repository to match upstream
           body: This pull request updates the forked repository to match upstream.
           branch: my-branch
+          base: main
           token: ${{ secrets.MY_TOKEN }}
 
 
