--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -86,10 +86,8 @@ jobs:
           git pull --unshallow
           git remote add upstream https://github.com/Gocha64/Today_Feeling.git
           git fetch upstream
-          git checkout main
-#          git merge -Xtheirs upstream/main
-          
-          
+          git checkout upstream/main
+      
       - name: Create pull request
         uses: peter-evans/create-pull-request@v4
         with:
