TF-81--FixGenre 장르 수정 기능

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".profile.FixGenreActivity"
+            android:exported="false" />
+        <activity
             android:name=".profile.FixUserActivity"
             android:exported="false" />
         <activity
