--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -86,7 +86,7 @@ jobs:
           git pull --unshallow
           git remote add upstream https://github.com/Gocha64/Today_Feeling.git
           git fetch upstream
-          git checkout upstream/main
+          git checkout main
           git merge -Xtheirs upstream/main
           git push origin main
       
