--- a/.github/workflows/Check for-upstream-repository-changes.yml
+++ b/.github/workflows/Check for-upstream-repository-changes.yml
@@ -30,7 +30,7 @@ name: Check for upstream repository changes
 
 on:
   schedule:
-    - cron: '15 0 * * *'   # Run once in hour
+    - cron: '15 * * * *'   # Run once in hour
   workflow_dispatch:
 
 jobs:
